--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "description": "Improved user interface for compendium packs",
+  "description": "",
   "license": "MIT",
   "private": true,
   "type": "module",
@@ -15,28 +15,17 @@
   "dependencies": {
     "@typhonjs-fvtt/runtime": "^0.1.2",
     "@typhonjs-fvtt/svelte-standard": "^0.1.0",
+    "stylelint": "^15.11.0",
+    "stylelint-config-sass-guidelines": "^10.0.0",
     "svelte": "^4.2.8",
     "svelte-range-slider-pips": "^2.2.3"
   },
   "devDependencies": {
-    "@tsconfig/svelte": "^5.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
     "@typhonjs-config/eslint-config": "^0.6.3",
     "@typhonjs-fvtt/eslint-config-foundry.js": "^0.8.0",
     "eslint": "^8.55.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-svelte": "^2.35.1",
-    "postcss-scss": "^4.0.9",
-    "sass": "^1.69.5",
-    "stylelint": "^15.11.0",
-    "stylelint-config-sass-guidelines": "^10.0.0",
-    "svelte-preprocess": "^5.1.2",
-    "terser": "^5.26.0",
+    "svelte-preprocess": "^5.1.1",
+    "terser": "^5.25.0",
     "vite": "^4.5.1"
   },
   "browserslist": [
